# BitcoinUserData

./: .gitignore  README.md  main.py  requirements.txt  setup.cfg  setup.py
src/: main.py
src/bitcoin_user_data.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_spark.py
