[metadata]
name = bitcoin-user-data
version = 0.0.1
author = Bengi Boynak
author_email = bboynak@gmail.com
description = This is a PySpark exercise for loading, transforming and joining dataframes from two file sources.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bboynak/BitcoinUserData/
project_urls =
    Bug Tracker = https://github.com/bboynak/BitcoinUserData/issues
classifiers =
    Programming Language :: Python :: 3.7.6
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src